--- a/scripts/model/0.2_config.yml
+++ b/scripts/model/0.2_config.yml
@@ -15,33 +15,55 @@ sb_trainable: true
 sp_trainable: true
 state_id: 2
 symbolic.funs_name.0:
+- - x
+  - exp
 - - '0'
   - '0'
 - - '0'
   - '0'
-- - '0'
-  - '0'
+- - x
+  - x
+- - x
+  - x
 symbolic.funs_name.1:
-- - '0'
+- - x
   - '0'
   - '0'
-- - '0'
+  - exp
+  - x
+- - x
   - '0'
-  - tanh
-- - '0'
+  - '0'
+  - exp
+  - x
+- - x
   - '0'
   - '0'
+  - exp
+  - x
+- - x
+  - '0'
+  - '0'
+  - x
+  - x
+- - x
+  - '0'
+  - '0'
+  - exp
+  - x
 symbolic.funs_name.2:
-- - '0'
-  - '0'
-  - '0'
+- - x
+  - exp
+  - x
+  - x
+  - x
 symbolic_enabled: false
 width:
 - - 2
   - 0
-- - 3
+- - 5
   - 0
-- - 3
+- - 5
   - 0
 - - 1
   - 0
